--- a/MyMapApp/app/src/main/res/layout/activity_maps.xml
+++ b/MyMapApp/app/src/main/res/layout/activity_maps.xml
@@ -9,11 +9,13 @@
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button" />
+        android:text="Switch View" />
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
 
     </LinearLayout>
 
