--- a/MyMapApp/app/src/main/res/layout/activity_maps.xml
+++ b/MyMapApp/app/src/main/res/layout/activity_maps.xml
@@ -9,6 +9,7 @@
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="switchView"
         android:text="Switch View" />
 
 
