--- a/MyMapApp/app/src/main/res/layout/activity_maps.xml
+++ b/MyMapApp/app/src/main/res/layout/activity_maps.xml
@@ -7,11 +7,24 @@
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="switchView"
         android:text="Switch View" />
 
+
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="trackOff"
+        android:text="Track" />
+
+    <Button
+        android:id="@+id/button6"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Button" />
 
     <LinearLayout
         android:layout_width="match_parent"
