--- a/MyMapApp/app/src/main/res/layout/activity_maps.xml
+++ b/MyMapApp/app/src/main/res/layout/activity_maps.xml
@@ -17,14 +17,15 @@
         android:id="@+id/button5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="trackOff"
+        android:onClick="getLocation"
         android:text="Track" />
 
     <Button
         android:id="@+id/button6"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Button" />
+        android:onClick="clear"
+        android:text="Clear" />
 
     <LinearLayout
         android:layout_width="match_parent"
