--- a/MyMapApp/app/src/main/res/layout/activity_maps.xml
+++ b/MyMapApp/app/src/main/res/layout/activity_maps.xml
@@ -27,6 +27,20 @@
         android:onClick="clear"
         android:text="Clear" />
 
+    <EditText
+        android:id="@+id/editText_search"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Search:" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Search" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
